--- a/package.json
+++ b/package.json
@@ -30,13 +30,39 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "chain3": "^0.1.4",
     "expo": "^27.0.1",
+    "node-libs-browser": "^2.1.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "expo-web": "^0.0.12",
     "react-dom": "16.0.0",
     "react-native-web": "^0.4.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "2.9.4"
+    "webpack-dev-server": "2.9.4",
+    "abi-decoder": "^1.1.0",
+    "async": "^2.6.1",
+    "bignumber.js": "^5.0.0",
+    "body-parser": "^1.12.2",
+    "concurrently": "^3.5.1",
+    "crypto": "^1.0.1",
+    "ejs": "~2.5.7",
+    "eth-lib": "^0.2.8",
+    "ethereum-input-data-decoder": "0.0.6",
+    "express": "^4.16.0",
+    "hash.js": "^1.1.3",
+    "keccak": "^1.4.0",
+    "log4js": "^2.10.0",
+    "mongoose": "^4.13.12",
+    "morgan": "^1.9.0",
+    "node-schedule": "^1.3.0",
+    "number-to-bn": "^1.7.0",
+    "secp256k1": "^3.5.2",
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^2.0.4",
+    "solc": "^0.4.19",
+    "underscore": "^1.9.0",
+    "utf8": "^3.0.0",
+    "web3": "^1.0.0-beta.36"
   }
 }
